--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.0",
         "yiisoft/yii2": "~2.0.0",
         "nesbot/carbon": "^2.0.0",
         "yiisoft/yii2-mongodb": "~3.0.0"
@@ -26,10 +26,5 @@
             "type": "composer",
             "url": "https://asset-packagist.org"
         }
-    ],
-    "config": {
-        "allow-plugins": {
-            "yiisoft/yii2-composer": true
-        }
-    }
+    ]
 }
