--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "^7.2 || ^8.0",
         "yiisoft/yii2": "~2.0.0",
         "nesbot/carbon": "^2.0.0",
-        "yiisoft/yii2-mongodb": "~3.0.0"
+        "yiisoft/yii2-mongodb": "~3.0.0",
+        "ext-mongodb": "*"
     },
     "autoload": {
         "psr-4": {
